tests/baselines/reference/overloadOnConstNoStringImplementation2(strict=true).errors.txt
overloadOnConstNoStringImplementation2.ts(2,5): error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.
overloadOnConstNoStringImplementation2.ts(6,5): error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.
overloadOnConstNoStringImplementation2.ts(17,1): error TS2454: Variable 'c' is used before being assigned.
overloadOnConstNoStringImplementation2.ts(18,1): error TS2454: Variable 'c' is used before being assigned.
overloadOnConstNoStringImplementation2.ts(18,9): error TS2345: Argument of type '(x: 'bye') => number' is not assignable to parameter of type '(x: "hi") => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '"hi"' is not assignable to type '"bye"'.
overloadOnConstNoStringImplementation2.ts(19,1): error TS2454: Variable 'c' is used before being assigned.
overloadOnConstNoStringImplementation2.ts(20,1): error TS2454: Variable 'c' is used before being assigned.
overloadOnConstNoStringImplementation2.ts(20,9): error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '(x: "hi") => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'string' is not assignable to type 'number'.


==== overloadOnConstNoStringImplementation2.ts (8 errors) ====
    interface I {
        x1(a: number, callback: (x: 'hi') => number);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    class C implements I {
        x1(a: number, callback: (x: 'hi') => number);
        ~~
!!! error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.
        x1(a: number, callback: (x: any) => number) {
            callback('hi');
            callback('bye');
            var hm = "hm";
            callback(hm);
            callback(1);
        }
    }
    
    var c: C;
    c.x1(1, (x: 'hi') => { return 1; } );
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    c.x1(1, (x: 'bye') => { return 1; } ); 
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: 'bye') => number' is not assignable to parameter of type '(x: "hi") => number'.
!!! error TS2345:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:     Type '"hi"' is not assignable to type '"bye"'.
!!! related TS2793 overloadOnConstNoStringImplementation2.ts:7:5: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.
    c.x1(1, (x: string) => { return 1; } );
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    c.x1(1, (x: number) => { return 1; } );
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '(x: "hi") => number'.
!!! error TS2345:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:     Type 'string' is not assignable to type 'number'.
!!! related TS2793 overloadOnConstNoStringImplementation2.ts:7:5: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.